--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -14,7 +14,7 @@
 <!--NavBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" th:href="@{/}">Smart Contact Manager</a>
+        <a class="navbar-brand" href="#">Smart Contact Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,13 +26,10 @@
                     <a class="nav-link active" th:href="@{/}" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/about}">About</a>
+                    <a class="nav-link" href="#"><span th:text="${user.name}"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/signin}">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/signup}">Signup</a>
+                    <a class="nav-link" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
 
