--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
 <head>
     <meta charset="UTF-8">
-    <title>User Dashboard</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>welcome you are normal user </h1>
-<h1>this is private dashboard</h1>
+<section>
+    <h1>Welcome to dashboard </h1>
+</section>
 </body>
 </html>
