--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.rtl.min.css"
           integrity="sha384-OXTEbYDqaX2ZY/BOaZV/yFGChYHtrXH2nyXJ372n2Y8abBhrqacCEe+3qhSHtLjy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <title th:text="${title}">Base Html</title>
 </head>
@@ -38,9 +40,28 @@
 </nav>
 <!--End of NavBar-->
 
+<!--sidebar-->
+<div class="sidebar">
+    <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
+    <a href="#"> <i class="fa-solid fa-house"></i> Home</a>
+    <a href="#"> <i class="fa-solid fa-address-book"></i> View Contact</a>
+    <a href="#"> <i class="fa-solid fa-pen"></i> Add Contact</a>
+    <a href="#"> <i class="fa-solid fa-user"></i> Your Profile</a>
+    <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
+    <a href="#"> <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout</a>
+    <div class="divider"></div>
+</div>
+<!--end of sidebar-->
 
-<div th:replace="${content}"></div>
+<!--content area -->
+<div class="content">
 
+    <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
+
+    <div th:replace="${content}"></div>
+
+</div>
+<!--End of SideBar-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -51,6 +72,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
