--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -14,7 +14,7 @@
 <body>
 
 <!--NavBar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Smart Contact Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -41,20 +41,20 @@
 <!--End of NavBar-->
 
 <!--sidebar-->
-<div class="sidebar">
+<div class="sidebar mt-3">
     <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
-    <a href="#"> <i class="fa-solid fa-house"></i> Home</a>
+    <a href="#" th:href="@{/user/index}"> <i class="fa-solid fa-house"></i> Home</a>
     <a href="#"> <i class="fa-solid fa-address-book"></i> View Contact</a>
-    <a href="#"> <i class="fa-solid fa-pen"></i> Add Contact</a>
+    <a href="#" th:href="@{/user/add-contact}"> <i class="fa-solid fa-pen"></i> Add Contact</a>
     <a href="#"> <i class="fa-solid fa-user"></i> Your Profile</a>
     <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
-    <a href="#"> <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout</a>
+    <a href="#" th:href="@{/logout}"> <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout</a>
     <div class="divider"></div>
 </div>
 <!--end of sidebar-->
 
 <!--content area -->
-<div class="content">
+<div class="content mt-5">
 
     <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 
