--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -44,7 +44,7 @@
 <div class="sidebar mt-3">
     <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
     <a href="#" th:href="@{/user/index}"> <i class="fa-solid fa-house"></i> Home</a>
-    <a href="#"> <i class="fa-solid fa-address-book"></i> View Contact</a>
+    <a href="#" th:href="@{/user/show-contacts}"> <i class="fa-solid fa-address-book"></i> View Contact</a>
     <a href="#" th:href="@{/user/add-contact}"> <i class="fa-solid fa-pen"></i> Add Contact</a>
     <a href="#"> <i class="fa-solid fa-user"></i> Your Profile</a>
     <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
@@ -58,10 +58,16 @@
 
     <i onclick="toggleSidebar()" class="fas fa-bars m-3"></i>
 
+    <div th:if="${session.message}" class="container">
+        <div th:classappend="${'alert-'+session.message.type}" class="alert alert-success text-center" role="alert">
+            <span th:text="${session.message.content}"></span>
+        </div>
+        <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+    </div>
+
     <div th:replace="${content}"></div>
 
 </div>
-<!--End of SideBar-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
