--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -16,7 +16,7 @@
 <!--NavBar-->
 <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Smart Contact Manager</a>
+        <a class="navbar-brand" href="#" th:href="@{/user/index}">Smart Contact Manager</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
 
             <ul class="navbar-nav me-auto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/}" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" th:href="@{/user/index}" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#"><span th:text="${user.name}"></span></a>
@@ -44,7 +44,7 @@
 <div class="sidebar mt-3">
     <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
     <a href="#" th:href="@{/user/index}"> <i class="fa-solid fa-house"></i> Home</a>
-    <a href="#" th:href="@{/user/show-contacts}"> <i class="fa-solid fa-address-book"></i> View Contact</a>
+    <a href="#" th:href="@{/user/show-contacts/0}"> <i class="fa-solid fa-address-book"></i> View Contact</a>
     <a href="#" th:href="@{/user/add-contact}"> <i class="fa-solid fa-pen"></i> Add Contact</a>
     <a href="#"> <i class="fa-solid fa-user"></i> Your Profile</a>
     <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
