--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -22,8 +22,16 @@
                 <tbody>
                 <tr th:each="c : ${contacts}">
                     <th scope="row" th:text="${'SCM2022'+c.cId}"></th>
-                    <td th:text="${c.name}"></td>
-                    <td th:text="${c.email}"></td>
+                    <td>
+                        <img alt="Profile Photo Display" class="my_profile_picture" src=""
+                             th:src="@{'/img/'+${c.image}}">
+                       <span th:text="${c.name}"></span>
+                    </td>
+                    <td>
+                        <a th:href="@{'/user/' +${c.cId}+ '/contact/'}">
+                            <span th:text="${c.email}"></span>
+                        </a>
+                    </td>
                     <td th:text="${c.phone}"></td>
                     <td>
                         <button class="btn btn-danger btn-sm">Delete</button>
@@ -42,12 +50,11 @@
                     </li>
 
                     <li th:each="i : ${#numbers.sequence(1,totalPages)}"
-                        th:classappend="${currentPage+1==i?'active':''}"  th:class="page-item">
+                        th:classappend="${currentPage+1==i?'active':''}" th:class="page-item">
 
                         <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${i-1}}">
                             <span th:text="${i}"></span>
                         </a>
-
                     </li>
 
                     <li th:if="${currentPage+1!=totalPages}" class="page-item">
