--- a/src/main/resources/templates/normal/contact_detail.html
+++ b/src/main/resources/templates/normal/contact_detail.html
@@ -38,7 +38,7 @@
                     <th:block th:utext="${contact.description}"></th:block>
                 </div>
                 <div class="container text-center mt-3">
-                    <button class="btn btn-danger btn-sm">Delete</button>
+                    <a th:href="@{'/user/delete/'+${contact.cId}}" class="btn btn-danger btn-sm">Delete</a>
                     <button class="btn btn-primary btn-sm">Update</button>
                 </div>
 
