--- a/src/main/resources/templates/normal/contact_detail.html
+++ b/src/main/resources/templates/normal/contact_detail.html
@@ -8,6 +8,12 @@
 <section>
     <div class="card" th:if="${contact}">
         <div class="card-body" >
+
+            <div th:if="${session.message}" th:classappend="${session.message.getType}" class="alert">
+                <p class="text-center" th:text="${session.message.getContent}"></p>
+                <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+            </div>
+
             <div class="container text-center">
                 <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
                      th:src="@{'/img/'+${contact.image}}">
@@ -39,7 +45,12 @@
                 </div>
                 <div class="container text-center mt-3">
                     <a th:href="@{'/user/delete/'+${contact.cId}}" class="btn btn-danger btn-sm">Delete</a>
-                    <button class="btn btn-primary btn-sm">Update</button>
+
+                    <form method="post" th:action="@{'/user/update-contact/'+${contact.cId}}" class="mt-2">
+
+                        <button type="submit" class="btn btn-primary btn-sm">Update</button>
+
+                    </form>
                 </div>
 
             </div>
