--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" th:href="@{/user/index}" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><span th:text="${user.name}"></span></a>
+                    <a class="nav-link" href="#" th:href="@{/user/profile}"><span th:text="${user.name}"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/logout}">Logout</a>
@@ -46,7 +46,7 @@
     <a href="#" th:href="@{/user/index}"> <i class="fa-solid fa-house"></i> Home</a>
     <a href="#" th:href="@{/user/show-contacts/0}"> <i class="fa-solid fa-address-book"></i> View Contact</a>
     <a href="#" th:href="@{/user/add-contact}"> <i class="fa-solid fa-pen"></i> Add Contact</a>
-    <a href="#"> <i class="fa-solid fa-user"></i> Your Profile</a>
+    <a href="#" th:href="@{/user/profile}"> <i class="fa-solid fa-user"></i> Your Profile</a>
     <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
     <a href="#" th:href="@{/logout}"> <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout</a>
     <div class="divider"></div>
