added contact search feature

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -84,3 +84,16 @@ background:#e2e2e2!important;
     object-fit: cover;
     border: 1px solid black;
 }
+/*search css*/
+
+.search-container{
+    position: relative;
+}
+.search-result{
+    position: absolute;
+    background: white;
+    width: 100%;
+    padding: 10px;
+    border: 1px solid gray;
+    display: none;
+}
