--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <section>
+    <div class="container">
     <div class="card">
         <div class="card-body">
             <h1 class="text-center">Add Contact</h1>
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
