--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -6,70 +6,82 @@
 </head>
 <body>
 <section>
-    <div class="card">
-        <div class="card-body">
-            <h1 class="text-center">Your Contacts</h1>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="c : ${contacts}">
-                    <th scope="row" th:text="${'SCM2022'+c.cId}"></th>
-                    <td>
-                        <img alt="Profile Photo Display" class="my_profile_picture" src=""
-                             th:src="@{'/img/'+${c.image}}">
-                        <span th:text="${c.name}"></span>
-                    </td>
-                    <td>
-                        <a th:href="@{'/user/' +${c.cId}+ '/contact/'}">
-                            <span th:text="${c.email}"></span>
-                        </a>
-                    </td>
-                    <td th:text="${c.phone}"></td>
-                    <td>
-                        <a th:href="@{'/user/delete/'+${c.cId}}" class="btn btn-danger btn-sm">Delete</a>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center">Your Contacts</h1>
+                <!--Search-->
+                <div class="search-container my-3">
 
-                        <form method="post" th:action="@{'/user/update-contact/'+${c.cId}}" class="mt-2">
+                    <input onkeyup="search()" id="search-input" type="text" class="form-control" placeholder="Search Your Contact">
+                    <div class="search-result">
 
-                            <button type="submit" class="btn btn-primary btn-sm">Update</button>
+                    </div>
 
-                        </form>
+                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="c : ${contacts}">
+                        <th scope="row" th:text="${'SCM2022'+c.cId}"></th>
+                        <td>
+                            <img alt="Profile Photo Display" class="my_profile_picture" src=""
+                                 th:src="@{'/img/'+${c.image}}">
+                            <span th:text="${c.name}"></span>
+                        </td>
+                        <td>
+                            <a th:href="@{'/user/' +${c.cId}+ '/contact/'}">
+                                <span th:text="${c.email}"></span>
+                            </a>
+                        </td>
+                        <td th:text="${c.phone}"></td>
+                        <td>
+                            <a th:href="@{'/user/delete/'+${c.cId}}" class="btn btn-danger btn-sm">Delete</a>
 
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                            <form method="post" th:action="@{'/user/update-contact/'+${c.cId}}" class="mt-2">
 
-            <!--Pagination-->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
+                                <button type="submit" class="btn btn-primary btn-sm">Update</button>
 
-                    <li th:if="${currentPage!=0}" class="page-item">
-                        <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${currentPage-1}}">Previous</a>
-                    </li>
+                            </form>
 
-                    <li th:each="i : ${#numbers.sequence(1,totalPages)}"
-                        th:classappend="${currentPage+1==i?'active':''}" th:class="page-item">
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
 
-                        <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${i-1}}">
-                            <span th:text="${i}"></span>
-                        </a>
-                    </li>
+                <!--Pagination-->
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
 
-                    <li th:if="${currentPage+1!=totalPages}" class="page-item">
-                        <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${currentPage+1}}">Next</a>
-                    </li>
+                        <li th:if="${currentPage!=0}" class="page-item">
+                            <a class="page-link" href="#"
+                               th:href="@{'/user/show-contacts/'+${currentPage-1}}">Previous</a>
+                        </li>
 
-                </ul>
-            </nav>
+                        <li th:each="i : ${#numbers.sequence(1,totalPages)}"
+                            th:classappend="${currentPage+1==i?'active':''}" th:class="page-item">
 
+                            <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${i-1}}">
+                                <span th:text="${i}"></span>
+                            </a>
+                        </li>
+
+                        <li th:if="${currentPage+1!=totalPages}" class="page-item">
+                            <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${currentPage+1}}">Next</a>
+                        </li>
+
+                    </ul>
+                </nav>
+
+            </div>
         </div>
     </div>
 </section>
