--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -97,3 +97,7 @@ background:#e2e2e2!important;
     border: 1px solid gray;
     display: none;
 }
+.active{
+    background: #009688 !important;
+    color: white !important;
+}
