--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -99,5 +99,11 @@
             selector: '#mytextarea'
         });
     </script>
+    <script>
+        $(document).ready(()=>{
+            $(".item").removeClass("active");
+            $("#add-link").addClass("active");
+        });
+    </script>
 </section>
 </body>
