--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -10,6 +10,10 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <title th:text="${title}">Base Html</title>
+<!--jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.js"
+            integrity="sha256-tXm+sa1uzsbFnbXt8GJqsgi2Tw+m4BLGDof6eUPjbtk=" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -25,7 +29,7 @@
 
             <ul class="navbar-nav me-auto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/user/index}" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" th:href="@{/user/index}" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/user/profile}"><span th:text="${user.name}"></span></a>
@@ -43,11 +47,12 @@
 <!--sidebar-->
 <div class="sidebar mt-3">
     <span onclick="toggleSidebar()" class="crossBtn">&times;</span>
-    <a href="#" th:href="@{/user/index}"> <i class="fa-solid fa-house"></i> Home</a>
-    <a href="#" th:href="@{/user/show-contacts/0}"> <i class="fa-solid fa-address-book"></i> View Contact</a>
-    <a href="#" th:href="@{/user/add-contact}"> <i class="fa-solid fa-pen"></i> Add Contact</a>
-    <a href="#" th:href="@{/user/profile}"> <i class="fa-solid fa-user"></i> Your Profile</a>
-    <a href="#"> <i class="fa-solid fa-gear"></i> Settings</a>
+    <a id="home-link" href="#" th:href="@{/user/index}" class="item"> <i class="fa-solid fa-house"></i> Home</a>
+    <a id="contacts-link" href="#" th:href="@{/user/show-contacts/0}" class="item"> <i class="fa-solid fa-address-book"></i> View
+        Contact</a>
+    <a id="add-link" href="#" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-pen"></i> Add Contact</a>
+    <a id="profile-link" href="#" th:href="@{/user/profile}" class="item"> <i class="fa-solid fa-user"></i> Your Profile</a>
+    <a id="settings-link" href="#" th:href="@{/user/settings}" class="item"> <i class="fa-solid fa-gear"></i> Settings</a>
     <a href="#" th:href="@{/logout}"> <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout</a>
     <div class="divider"></div>
 </div>
