--- a/src/main/resources/templates/normal/profile.html
+++ b/src/main/resources/templates/normal/profile.html
@@ -8,45 +8,52 @@
 <section>
     <div class="container">
         <div class="my-card">
-          <div class="card-body">
+            <div class="card-body">
 
-            <div class="container text-center">
-            <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
-                 th:src="@{'/img/'+${user.imageUrl}}">
+                <div class="container text-center">
+                    <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
+                         th:src="@{'/img/'+${user.imageUrl}}">
+                </div>
+
+                <h1 class="text-center mt-3" th:text="${user.name}"></h1>
+                <div class="table-responsive">
+                    <table class="table text-center">
+                        <thead>
+                        <tr>
+                            <th class="col">#USERID</th>
+                            <th class="col">SCMUSER<span th:text="${user.id}"></span></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">Email</th>
+                            <td><span th:text="${user.email}"></span></td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Role</th>
+                            <td><span th:text="${user.role}"></span></td>
+                        <tr>
+                            <th scope="row">Account Active</th>
+                            <td><span th:text="${user.enabled}"></span></td>
+                        </tr>
+
+                        <tr>
+                            <th scope="row">About</th>
+                            <td><span th:text="${user.about}"></span></td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
-
-            <h1 class="text-center mt-3" th:text="${user.name}"></h1>
-
-            <table class="table text-center">
-              <thead>
-              <tr>
-                <th class="col">#USERID</th>
-                <th class="col">SCMUSER<span th:text="${user.id}"></span></th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr>
-                <th scope="row">Email</th>
-                <td><span th:text="${user.email}"></span></td>
-              </tr>
-              <tr>
-                <th scope="row">Role</th>
-                <td><span th:text="${user.role}"></span></td>
-              <tr>
-                <th scope="row">Account Active</th>
-                <td><span th:text="${user.enabled}"></span></td>
-              </tr>
-
-              <tr>
-                <th scope="row">About</th>
-                <td><span th:text="${user.about}"></span></td>
-              </tr>
-
-              </tbody>
-            </table>
-          </div>
         </div>
     </div>
+    <script>
+    $(document).ready(()=>{
+        $(".item").removeClass("active");
+        $("#profile-link").addClass("active");
+    });
+</script>
 </section>
 </body>
 </html>
