--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -26,6 +26,12 @@
            </div>
        </div>
    </div>
+    <script>
+        $(document).ready(()=>{
+           $(".item").removeClass("active");
+           $("#home-link").addClass("active");
+        });
+    </script>
 </section>
 </body>
 </html>
