creating forgot password service using mail

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,6 +42,9 @@
                                 <a href="/signup">Register here</a>
                             </div>
 
+                            <div class="container text-center m-1">
+                                <a th:href="@{/forgot}">Forgot Password</a>
+                            </div>
                         </form>
 
                     </div>
