--- a/src/main/resources/templates/forgot_email_form.html
+++ b/src/main/resources/templates/forgot_email_form.html
@@ -10,10 +10,18 @@
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
-                    <div id="login-box" style="height: 220px" class="col-md-12">
+                    <div id="login-box" style="height: 244px;" class="col-md-12">
+
+                        <!--  message box-->
+                        <div th:if="${session.message}" class="container">
+                            <div class="alert alert-danger my-2 text-center" role="alert">
+                                <span th:text="${session.message}"></span>
+                            </div>
+                            <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+                        </div>
 
                         <!--Email form-->
-                        <h3 class="text-center m-3">This is email form</h3>
+                        <h3 class="text-center m-3">Your Registered Email</h3>
 
                         <form th:action="@{/send-otp}" method="post">
                             <div class="form-group m-4">
