--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,6 +23,10 @@
                             <div th:if="${param.logout}" class="alert alert-success">
                                 you have been logged out
                             </div>
+                            <div th:if="${param.change}" class="alert alert-success">
+                                <p th:text="${param.change}"></p>
+                            </div>
+
 
                             <div class="form-group">
                                 <label for="username" class="text-info">Username</label><br>
