--- a/src/main/resources/templates/verify_otp.html
+++ b/src/main/resources/templates/verify_otp.html
@@ -15,8 +15,15 @@
                         <div class="alert alert-success m-2" role="alert">
                             We have sent otp to your email..
                         </div>
+                        <!--message box-->
+                        <div th:if="${session.message}" class="container">
+                            <div class="alert alert-danger my-2 text-center" role="alert">
+                                <span th:text="${session.message}"></span>
+                            </div>
+                            <th:block th:text="${#session.removeAttribute('message')}"></th:block>
+                        </div>
 
-                        <form th:action="@{/send-otp}" method="post">
+                        <form th:action="@{/verify-otp}" method="post">
                             <div class="form-group m-4">
                                 <input type="text" name="otp" required placeholder="Enter OTP here"
                                        class="form-control">
