--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
 <section>
-  <h1>This is About page</h1>
-  <h2>Here we are going to write about smart contact manager</h2>
+    <div class="container text-center">
+        <h1>Thanks for choosing our services</h1>
+        <h2>All the information about the cloud contact will be available soon....</h2>
+    </div>
 </section>
 </body>
 </html>
