--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
     <h1>This is Home Page</h1>
     <p>start collecting your contact in very smarter way. We provide very smarter and
     efficient way of handling contact</p>
-    <button class="btn bg-primary btn-lg text-white">Get Start</button>
+    <a class="btn bg-primary btn-lg text-white" th:href="@{/signup}">Get Start</a>
 </div>
 </section>
 </body>
