--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -23,7 +23,7 @@
 
             <ul class="navbar-nav me-auto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/}" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" th:href="@{/}" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/about}">About</a>
