home page background changed

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,8 @@
 <body>
 <section class="banner d-flex justify-content-center align-items-center">
 <div class="text-center">
-    <h1>This is Home Page</h1>
-    <p>start collecting your contact in very smarter way. We provide very smarter and
+    <h1>Home Page</h1>
+    <p style="opacity: 1">start collecting your contact in very smarter way. We provide very smarter and
     efficient way of handling contact</p>
     <a class="btn bg-primary btn-lg text-white" th:href="@{/signup}">Get Start</a>
 </div>
