--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,13 +2,13 @@ body{
 background:#e2e2e2!important;
 }
 .bg-primary{
-    background:#0d6efd !important;
+    background: #0d6efd !important;
 }
 .banner{
     width: 100%;
     height:93.2vh;
-    background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)),url("../img/banner.jpg");
-    background-size: cover;
+    background:linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)),url("../img/banner.gif");
+    background-size: contain;
     color: white;
 }
 .my-card{
