--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,12 +30,14 @@
 
                             <div class="form-group">
                                 <label for="username" class="text-primary">Username</label><br>
-                                <input type="text" name="username" id="username" class="form-control" placeholder="Email">
+                                <input type="text" name="username" id="username" class="form-control"
+                                       placeholder="Email">
                             </div>
 
                             <div class="form-group">
                                 <label for="password" class="text-primary">Password:</label><br>
-                                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
+                                <input type="password" name="password" id="password" class="form-control"
+                                       placeholder="Password">
                             </div>
 
                             <div class="container text-center mt-2">
