--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -94,7 +94,7 @@ background:#e2e2e2!important;
     background: white;
     width: 100%;
     padding: 10px;
-    border: 1px solid gray;
+    border: 1px solid #838282;
     display: none;
 }
 .active{
