--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
 <section>
-   <div class="container">
-       <div class="card">
-           <div class="card-body my-5">
-               <div class="container text-center">
-                   <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
-                        th:src="@{'/img/contact_logo.png'}">
-               </div>
-               <h1 class="text-center mt-3 text-secondary font-italic font-weight-light">
-                   Start Adding your contact on cloud
-               </h1>
-               <div class="container text-center">
-               <a th:href="@{/user/add-contact}" class="btn btn-primary text-uppercase mt-4">
-                   Add New Contact
-               </a>
+  <div class="container">
+    <div class="card">
+      <div class="card-body my-5">
+        <div class="container text-center">
+          <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
+               th:src="@{'/img/contact_logo.png'}">
+        </div>
+        <h1 class="text-center mt-3 text-secondary font-italic font-weight-light">
+          Start Adding your contact on cloud
+        </h1>
+        <div class="container text-center">
+          <a th:href="@{/user/add-contact}" class="btn btn-primary text-uppercase mt-4">
+            Add New Contact
+          </a>
 
-               </div>
-
-           </div>
-       </div>
-   </div>
-    <script>
-        $(document).ready(()=>{
-           $(".item").removeClass("active");
-           $("#home-link").addClass("active");
-        });
-    </script>
+        </div>
+        <div class="container text-center mt-3">
+          <h3 class="my-3">Donate Us</h3>
+          <div class="container text-center d-flex justify-content-center" >
+            <input type="text" class="form-control my-2 " style="width: 150px;" id="amount" placeholder="Enter Amount">
+          </div>
+          <button onclick="createPayment()" class="btn btn-primary">Pay</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+      $(document).ready(() => {
+          $(".item").removeClass("active");
+          $("#home-link").addClass("active");
+      });
+  </script>
 </section>
 </body>
 </html>
